# oop_exercise_08

./: CMakeLists.txt  Figure.cpp  Figure.hpp  Makefile  Point.cpp  Rectangle.cpp  Rectangle.hpp  Rhombus.cpp  Rhombus.hpp  Subscriber.cpp  Subscriber.hpp  Trapeze.cpp  Trapeze.hpp  main.cpp  oop_exercise_08
